# macos-alias

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-universal/: README.md  package.json
src/: lib.rs
